Update for new eel API Require SVN version of eel
Fri May 30 22:16:51 2008  Søren Sandmann  <sandmann@redhat.com>

	* libnautilus-private/nautilus-directory-background.c
	(initialize_background_from_settings): 
	* src/nautilus-information-panel.c
	(nautilus_information_panel_update_appearance): Update for new eel
	API
	* configure.in: Require SVN version of eel


svn path=/trunk/; revision=14212

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Fri May 30 22:16:51 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* libnautilus-private/nautilus-directory-background.c
+	(initialize_background_from_settings): 
+	* src/nautilus-information-panel.c
+	(nautilus_information_panel_update_appearance): Update for new eel
+	API
+	* configure.in: Require SVN version of eel
+
+Fri May 30 22:16:10 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* libnautilus-private/nautilus-directory-background.c
+
 Fri May 30 21:25:59 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* libnautilus-private/nautilus-directory-background.c
