Revert last commit as we do still need to deal with uris.
Fri May 30 23:33:17 2008  Søren Sandmann  <sandmann@redhat.com>

	* Revert last commit as we do still need to deal with uris.


svn path=/trunk/; revision=14213

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri May 30 23:33:17 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* Revert last commit as we do still need to deal with uris.
+
 Fri May 30 22:16:51 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* libnautilus-private/nautilus-directory-background.c
@@ -6,10 +10,6 @@ Fri May 30 22:16:51 2008  Søren Sandmann  <sandmann@redhat.com>
 	(nautilus_information_panel_update_appearance): Update for new eel
 	API
 	* configure.in: Require SVN version of eel
-
-Fri May 30 22:16:10 2008  Søren Sandmann  <sandmann@redhat.com>
-
-	* libnautilus-private/nautilus-directory-background.c
 
 Fri May 30 21:25:59 2008  Søren Sandmann  <sandmann@redhat.com>
 
