--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-05-31  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	(nautilus_file_operations_empty_trash):
+	Call setup_autos() to have the confirmation preference var
+	always initializated properly. Patch by Kai Willadsen (#535182).
+
 Sat May 31 03:20:11 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* libnautilus-private/nautilus-directory-background.c
