--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-01  Jovan Naumovski  <jovan@lugola.net>
+ 
+ 	* mk.po: Updated Macedonian translation.
+
 2008-05-25  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Fixed a small typo.
