Make use of new eel_background_save_to_gconf().
Sun Jun  1 19:30:58 2008  Søren Sandmann  <sandmann@redhat.com>

	* libnautilus-private/nautilus-directory-background.c
	(background_changed_callback): Make use of new
	eel_background_save_to_gconf().


svn path=/trunk/; revision=14224

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jun  1 19:30:58 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* libnautilus-private/nautilus-directory-background.c
+	(background_changed_callback): Make use of new
+	eel_background_save_to_gconf().
+
 2008-05-31  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c:
