Update for release.
2008-06-03  Christian Neumair  <cneumair@gnome.org>

	* NEWS:
	Update for release.

	* configure.in:
	Require eel 2.23.2.

svn path=/trunk/; revision=14225

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-06-03  Christian Neumair  <cneumair@gnome.org>
+
+	* NEWS:
+	Update for release.
+
+	* configure.in:
+	Require eel 2.23.2.
+
 Sun Jun  1 19:30:58 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* libnautilus-private/nautilus-directory-background.c
