post-release bump to 2.23.4
2008-06-03  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.4

svn path=/trunk/; revision=14227

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-06-03  Vincent Untz  <vuntz@gnome.org>
+
+	* configure.in: post-release bump to 2.23.4
+
+==================== 2.23.3 ====================
+
 2008-06-03  Christian Neumair  <cneumair@gnome.org>
 
 	* NEWS:
