Fixed a bad message in Persian translation (fixes bug #511623, reported by
2008-06-05  Roozbeh Pournader  <roozbeh@gmail.com>

	* fa.po: Fixed a bad message in Persian translation (fixes
	  bug #511623, reported by Hedayat Vatankhah, patch by
	  Elnaz Sarbar)

svn path=/trunk/; revision=14230

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2008-06-05  Roozbeh Pournader  <roozbeh@gmail.com>
+
+	* fa.po: Fixed a bad message in Persian translation (fixes
+	  bug #511623, reported by Hedayat Vatankhah, patch by
+	  Elnaz Sarbar)
+
 ==================== 2.23.3 ====================
 
 2008-06-01  Jovan Naumovski  <jovan@lugola.net>
