Updated Occitan translation
svn path=/trunk/; revision=14232

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-05  Yannig Marchegay  <yannig@marchegay.org>
+ 
+ 	* oc.po: Updated Occitan translation.
+
 2008-06-05  Roozbeh Pournader  <roozbeh@gmail.com>
 
 	* fa.po: Fixed a bad message in Persian translation (fixes
