--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-07  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2008-06-05  Yannig Marchegay  <yannig@marchegay.org>
  
  	* oc.po: Updated Occitan translation.
