--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-10  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-06-08  Funda Wang  <fundawang@gmail.com>
 
 	* zh_CN.po: Updated zh_CN translation.
