--- a/po/oc.po
+++ b/po/oc.po
@@ -1744,7 +1744,7 @@ msgid ""
 "Are you sure you want to permanently delete the %'d selected items from the "
 "trash?"
 msgstr ""
-"Sètz segur que volèz suprimir per totjorn l'element seleccionat de "
+"Sètz segur que volèz suprimir per totjorn lo %'d element seleccionat de "
 "la banasta ?"
 "Sètz segur que volèz suprimir per totjorn los %'d elements seleccionats "
 "de la banasta ?"
@@ -1775,7 +1775,7 @@ msgstr "Sètz segur que volètz suprimir per totjon \"%B\" ?"
 #, c-format
 msgid "Are you sure you want to permanently delete the %'d selected item?"
 "Are you sure you want to permanently delete the %'d selected items?"
-msgstr "Sètz segur que volèz suprimir per totjorn l'element seleccionat ?"
+msgstr "Sètz segur que volèz suprimir per totjorn lo %'d element seleccionat ?"
 "Sètz segur que volèz suprimir per totjorn los %'d elements seleccionats ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1293
