Never hide hidden or backup files in the trash. Fixes bug #153545.
2008-06-11  A. Walton  <awalton@gnome.org>

	* libnautilus-private/nautilus-file.c 
(nautilus_file_should_show):
	Never hide hidden or backup files in the trash. Fixes bug 
#153545.


svn path=/trunk/; revision=14259

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-11  A. Walton  <awalton@gnome.org>
+
+	* libnautilus-private/nautilus-file.c (nautilus_file_should_show):
+	Never hide hidden or backup files in the trash. Fixes bug #153545.
+
 2008-06-11  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-file-management-properties.glade:
