Add credit to Sebastien Bacher in the ChangeLog for the previous patch.
svn path=/trunk/; revision=14262

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,8 @@
 
 	* libnautilus-private/nautilus-dnd.c:
 	(nautilus_drag_default_drop_action_for_icons):
-	Don't use g_free () on a GFile. (#537995).
+	Don't use g_free () on a GFile.
+	Patch by Sebastien Bacher. (#537995).
 
 2008-06-11  A. Walton  <awalton@gnome.org>
 
