--- a/po/oc.po
+++ b/po/oc.po
@@ -1318,7 +1318,7 @@ msgstr "Pega lo tèxt estocat dins lo pòrta-papièr"
 #: ../libnautilus-private/nautilus-clipboard.c:448
 #: ../src/file-manager/fm-directory-view.c:6461
 msgid "Select _All"
-msgstr "Seleccionar un fichièr"
+msgstr "_Tot seleccionar"
 
 #. tooltip
 #: ../libnautilus-private/nautilus-clipboard.c:449
@@ -2019,7 +2019,7 @@ msgstr "Desplaçament de \"%B\" cap a \"%B\""
 
 #: ../libnautilus-private/nautilus-file-operations.c:2641
 msgid "Copying \"%B\" to \"%B\""
-msgstr "Còpia \"%B\" dins \"%B\""
+msgstr "Còpia de \"%B\" dins \"%B\""
 
 #: ../libnautilus-private/nautilus-file-operations.c:2646
 msgid "Duplicating \"%B\""
@@ -2385,7 +2385,7 @@ msgstr "ièr, 00:00"
 
 #: ../libnautilus-private/nautilus-file.c:3571
 msgid "yesterday, %-I:%M %p"
-msgstr "ièr,a  %-I:%M %p"
+msgstr "ièr, a  %-I:%M %p"
 
 #: ../libnautilus-private/nautilus-file.c:3573
 #: ../libnautilus-private/nautilus-file.c:3574
