--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-06-15  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	reviewed by: David Zeuthen <david@fubar.dk>
+
+	* libnautilus-private/nautilus-autorun.c:
+	Always open folder if the corresponding action is selected
+	in the autorun preferences.
+	Patch by Matthias Clasen. (#528675).
+
 2008-06-12  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-dnd.c:
