--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-16  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-file-operations.c (copy_move_file):
+	Use G_FILE_COPY_ALL_METADATA (#515777). Thanks to Alex Rostovtsev.
+
 2008-06-15  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	reviewed by: David Zeuthen <david@fubar.dk>
