Update for release.
2008-06-16  Christian Neumair  <cneumair@gnome.org>

	* NEWS:
	Update for release.

svn path=/trunk/; revision=14272

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-16  Christian Neumair  <cneumair@gnome.org>
+
+	* NEWS:
+	Update for release.
+
 2008-06-16  A. Walton  <awalton@gnome.org>
 
 	* libnautilus-private/nautilus-file.c
