post-release bump to 2.23.5.
2008-06-16  Christian Neumair  <cneumair@gnome.org>

	* configure.in: post-release bump to 2.23.5.

svn path=/trunk/; revision=14274

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-06-16  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in: post-release bump to 2.23.5.
+
+==================== 2.23.4 ====================
+
+2008-06-16  Christian Neumair  <cneumair@gnome.org>
+
 	* NEWS:
 	Update for release.
 
