Translation updated by Máté Őry.
2008-06-18  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated by Máté Őry.

svn path=/trunk/; revision=14276

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-18  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated by Máté Őry.
+
 2008-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
