--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-19  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-06-18  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated by Máté Őry.
