--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-23  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* configure.in: require libbeagle >= 0.2.4. (#351288).
+
 2008-06-19  Christian Persch  <chpe@gnome.org>
 
 	* src/file-manager/fm-directory-view.c:
