Add the emblem-shared icon to be hidden in the emblems dialog and to be
2008-06-23  Rodney Dawes  <dobey.pwns@gmail.com>

	* libnautilus-private/nautilus-emblem-utils.c:
	(is_reserved_keyword, nautilus_emblem_should_show_in_list):
	* libnautilus-private/nautilus-file.h:
	Add the emblem-shared icon to be hidden in the emblems dialog and
	to be used as a reserved keyword as well


svn path=/trunk/; revision=14281

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-06-23  Rodney Dawes  <dobey.pwns@gmail.com>
+
+	* libnautilus-private/nautilus-emblem-utils.c:
+	(is_reserved_keyword, nautilus_emblem_should_show_in_list):
+	* libnautilus-private/nautilus-file.h:
+	Add the emblem-shared icon to be hidden in the emblems dialog and
+	to be used as a reserved keyword as well
+
 2008-06-23  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* configure.in: require libbeagle >= 0.2.4. (#351288).
