--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-06-28  A. Walton  <awalton@gnome.org>
+
+	* libnautilus-private/nautilus-icon-container.c
+	(keyboard_arrow_key):
+	Move keyboard focus correctly after a file has been
+	removed. Patch thanks to Nelson Benitez. Closes bug #540107.
+
 2008-06-28  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-window-manage-views.c
