Update outdated information and mailing list address.
2008-06-29  Cosimo Cecchi  <cosimoc@gnome.org>

	* cut-n-paste-code/README: Update outdated information
	and mailing list address.

svn path=/trunk/; revision=14307

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-29  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* cut-n-paste-code/README: Update outdated information
+	and mailing list address.
+
+2008-06-29  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* cut-n-paste-code/Makefile.am:
 	* cut-n-paste-code/widgets/Makefile.am:
 	Remove useless empty widgets directory.
