--- a/cut-n-paste-code/README
+++ b/cut-n-paste-code/README
@@ -6,12 +6,11 @@ somewhere else.
 In the soon to come, Star Trek future, this code will be available
 as part of standard libraries.
 
-For example, the code in widgets/e-paned will be available as part
-of Gtk+ 1.4.
+For example, the code in libegg will be one day available as part
+of Gtk+.
 
 Until that happens, DON'T HACK the code, unless you are updating 
-from the original cut-n-paste source.  For example, 
-evolution/widgets/e-paned.
+from the original cut-n-paste source.
 
 Instead of hacking the code in cut-n-paste-code, create subclasses 
 and put them in libnautilus-extensions.
@@ -19,4 +18,4 @@ and put them in libnautilus-extensions.
 If you have any specific questions, comments or complaints about this
 setup, send mail to the nautilus mailing list at:
 
-nautilus-list@lists.eazel.com
+nautilus-list@gnome.org
