Remove reference to the need of a GNOME 2.4 environment to build Nautilus.
2008-06-29  Cosimo Cecchi  <cosimoc@gnome.org>

	* README: Remove reference to the need of a GNOME 2.4 environment
	to build Nautilus.

svn path=/trunk/; revision=14308

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-29  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* README: Remove reference to the need of a GNOME 2.4 environment
+	to build Nautilus.
+
+2008-06-29  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* cut-n-paste-code/README: Update outdated information
 	and mailing list address.
 
