--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-30  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+2008-06-30  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-directory-async.c (thumbnail_done),
 	(thumbnail_loader_size_prepared), (get_pixbuf_for_content),
 	(thumbnail_start):
