Post release version bump.
2008-06-30  Christian Neumair  <cneumair@gnome.org>

	* configure.in:
	Post release version bump.

svn path=/branches/gnome-2-22/; revision=14313

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-06-30  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.22.4 ===
+
+2008-06-30  Christian Neumair  <cneumair@gnome.org>
+
 	* NEWS:
 	Update for release.
 
