--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-07-03  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	* configure.in: Don't reference
+	cut-n-paste-code/widgets/ directory since it was removed
+	in revision 14306.
+
 2008-06-30  Christian Neumair  <cneumair@gnome.org>
 
 	* libnautilus-private/nautilus-directory-async.c (thumbnail_done),
